; ModuleID = '/home/carl/AnghaBench/php-src/sapi/litespeed/extr_lsapilib.c_is_enough_free_mem.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/litespeed/extr_lsapilib.c_is_enough_free_mem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@s_avail_pages = common dso_local global i32* null, align 8
@s_min_avail_pages = common dso_local global i32 0, align 4
@s_total_pages = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @is_enough_free_mem() #0 {
  %1 = load i32*, i32** @s_avail_pages, align 8
  %2 = load i32, i32* %1, align 4
  %3 = load i32, i32* @s_min_avail_pages, align 4
  %4 = icmp sgt i32 %2, %3
  br i1 %4, label %12, label %5

5:                                                ; preds = %0
  %6 = load i32*, i32** @s_avail_pages, align 8
  %7 = load i32, i32* %6, align 4
  %8 = mul nsw i32 %7, 10
  %9 = load i32, i32* @s_total_pages, align 4
  %10 = sdiv i32 %8, %9
  %11 = icmp sgt i32 %10, 0
  br label %12

12:                                               ; preds = %5, %0
  %13 = phi i1 [ true, %0 ], [ %11, %5 ]
  %14 = zext i1 %13 to i32
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
